--- a/analysis/workflows_finished/main_figures/figure_building.Rmd
+++ b/analysis/workflows_finished/main_figures/figure_building.Rmd
@@ -270,6 +270,7 @@ subrate.scplot <- function(count1, count2, mut, pops = c("Pop 1", "Pop 2"), labe
   ref <- substr(mut, 1, n-3)
   alt <- substr(mut, n, n)
   
+
   #make plot
   p_plot <- qplot(pop1.mut$Rate, pop2.mut$Rate) +
     labs(x = bquote(.(ref)%->%.(alt) ~ .(paste("in", pops[1]))), y = bquote(.(ref)%->%.(alt) ~ .(paste("in", pops[2])))) +
@@ -312,16 +313,9 @@ subrate.scplot <- function(count1, count2, mut, pops = c("Pop 1", "Pop 2"), labe
 
   return(p_plot)
 }
-
-format.mut <- function(mut){
-  n <- nchar(mut)
-  ref <- substr(mut, 1, n-3)
-  alt <- substr(mut, n, n)
-  return(expression(ref %->% alt))
-}
 ```
 
-```{r F2AB make}
+```{r F2AB make, fig.height=3.25, fig.width=7}
 a <- subrate.scplot(CDX_EAS_7mer_counts, JPT_EAS_7mer_counts, "ACG->T", pops = c("Chinese Dai in Xishuangbana", "Japanese in Tokyo"))
 b <- subrate.scplot(EAS_7mer_counts, EUR_7mer_counts, "TCC->T", pops = c("East Asia", "Europe"))
 grid.arrange(a, b, ncol = 2)
@@ -449,3 +443,185 @@ for (i in 1:length(data$Context)){
 }
 kable(data, digits = 6, row.names = F)
 ```
+
+##BC
+
+These two panels use datasets and functions:
+
+* **subrate.scplot**
+* **CI.plot.subpop.bygroup**
+* *7mer count dataframes for all EAS subpops*
+
+```{r F3BC }
+KHV_EAS_7mer_counts <- read_delim("subpops/7mer/KHV_EAS_7mer_counts.txt", "\t", escape_double = FALSE, trim_ws = TRUE)
+CHS_EAS_7mer_counts <- read_delim("subpops/7mer/CHS_EAS_7mer_counts.txt", "\t", escape_double = FALSE, trim_ws = TRUE)
+CHB_EAS_7mer_counts <- read_delim("subpops/7mer/CHB_EAS_7mer_counts.txt", "\t", escape_double = FALSE, trim_ws = TRUE)
+```
+
+```{r F3BC setup data}
+EASsubpops <- list(CDX_EAS_7mer_counts, KHV_EAS_7mer_counts, CHS_EAS_7mer_counts, CHB_EAS_7mer_counts, JPT_EAS_7mer_counts)
+EASpopnames <- c("CDX", "KHV", "CHS", "CHB", "JPT")
+```
+
+```{r F3BC make, fig.height = 3.25, fig.width = 7}
+b <- subrate.scplot(CDX_EAS_7mer_counts, JPT_EAS_7mer_counts, "AAC->C", c("Chinese Dai in Xishuangbana", "Japanese in Tokyo"), JPT7mers)
+c <- CI.plot.subpop.bygroup(EASsubpops, JPT7mers, EASpopnames, rep("red", 5), "signature four 7-mers")
+grid.arrange(b,c, ncol =2 )
+```
+
+# Figure 4
+
+##A
+
+```{r F4 upload data}
+SAS_7mer_counts <- read_delim("7mer/SAS_7mer_counts.txt", 
+                              "\t", escape_double = FALSE, trim_ws = TRUE)
+AFR_7mer_counts <- read_delim("7mer/AFR_7mer_counts.txt", 
+                              "\t", escape_double = FALSE, trim_ws = TRUE)
+```
+
+
+```{r F4A setup methods}
+# calculates homogeneity test p values for Fourway comparisons of counts dfs
+fourway.chi <- function(AFR, EUR, EAS, SAS, filter = T){
+  n.contexts = length(AFR$Context)
+  
+  # make dataframe for results
+  result <- data.frame(matrix(ncol=9,nrow=n.contexts))
+  colnames(result) <- c("Context", "X5mer","X3mer", "X1mer", 
+                        "AFR.Count", "EUR.Count", "EAS.Count", "SAS.Count", "p")
+  result$Context <- AFR$Context
+  result$X5mer <- AFR$X5mer # for smaller contexts, X3mer and X5mer columns do not exist,
+  result$X3mer <- AFR$X3mer # and will disappear at this step
+  result$X1mer <- AFR$X1mer 
+  result$AFR.Count <- AFR$Count; result$EUR.Count <- EUR$Count
+  result$EAS.Count <- EAS$Count; result$SAS.Count <- SAS$Count
+  
+  # start setting up tables
+  sums <- c(sum(AFR$Count), sum(EUR$Count), sum(EAS$Count), sum(SAS$Count))
+  
+  # set up table and run test for each context
+  for (i in 1:n.contexts){
+    c.a <- c(AFR$Count[i], EUR$Count[i], EAS$Count[i], SAS$Count[i])
+    c.b <- sums - c.a
+    data <- cbind(c.a, c.b)
+    warning <- is(tryCatch(chisq.test(data), warning = function(w) w), "warning")
+    if (filter == T & warning){
+      result$p[i] <- NA}
+    else result$p[i] <- chisq.test(data)$p.value
+    }
+  return(result)
+}
+
+ordered.p <- function(pdata){
+  #preprocess data to order and remove nas 
+  pdata <- pdata[complete.cases(pdata$p),]
+  myorder <- order(pdata$p)
+  n.muts <- length(pdata$p)
+  
+  p.ordered <- rep(0, n.muts)
+  
+  #set largest p-value 
+  j <- myorder[n.muts]
+  p.ordered[j] <- pdata$p[j]
+  
+  #initialize not mutated counts based on this lowest p-value mutation
+  not.mut <- c(pdata$AFR.Count[j], pdata$EUR.Count[j], 
+               pdata$EAS.Count[j], pdata$SAS.Count[j])
+  
+  for (i in n.muts:1){
+    j <- myorder[i]
+    mut <-c(pdata$AFR.Count[j], pdata$EUR.Count[j], 
+            pdata$EAS.Count[j], pdata$SAS.Count[j])
+    data <- cbind(mut, not.mut)
+    p.ordered[j] <- chisq.test(data)$p.value
+    
+    #add these mutations to the not.mutated counts for future tests
+    not.mut <- not.mut + mut
+  }
+  pdata$p <- p.ordered
+  return(pdata)
+}
+```
+
+
+```{r F4A make}
+# calculate ordered p values
+p.7mer <- fourway.chi(AFR_7mer_counts, EUR_7mer_counts, EAS_7mer_counts, SAS_7mer_counts)
+o.p.7mer <- ordered.p(p.7mer)
+
+# extract significantly variable mutation types and order by p value
+alpha <- 0.05/length(o.p.7mer$Context)
+o.sig.7mer <- subset(o.p.7mer, o.p.7mer$p < alpha)
+o.sig.7mer <- o.sig.7mer[order(o.sig.7mer$p),]
+
+# filter types from known 3mer signals
+EUR.signal <- c("TCC->T", "ACC->T", "TCT->T", "CCC->T")
+new.signal <- c("GAT->T", "ACC->A", "GAC->T", "ACG->T", "CCG->T", "GCG->T", "TCG->T")
+o.new.7mers <- subset(o.sig.7mer, !is.element(o.sig.7mer$X3mer, c(EUR.signal, new.signal)))
+
+# plot significant 7mers and print most signif. new results
+kable(head(o.new.7mers[,-c(2,3,4)], 10), digits = 600, row.names = F,
+      caption = "10 most significant new 7mers using ordered p value correction")
+```
+
+##BC
+
+We can't use my usual graphing function to make Figure 4B because there are '$\rightarrow$' characters that we need to insert in the plot text.  We will also need the following:
+
+* **subrate.scplot**
+* *7mer count dataframes for all nonadmixed continental populations*
+
+```{r F4B set up data}
+muts <- c("TTTAAAA->T", "ATTAAAA->T")
+AFR <- AFR_7mer_counts
+EUR <- EUR_7mer_counts
+EAS <- EAS_7mer_counts
+SAS <- SAS_7mer_counts
+```
+
+```{r F4B make}
+#NOTE: muts must all be from different contexts.  Otherwise this will do weird things.
+muts.i <- which(is.element(AFR$Context, muts))
+popnames <- c("Africa","Europe", "South\nAsia", "East\nAsia")
+colors <- c("forestgreen", "darkblue", "magenta","red")
+
+#have to do a silly workaround or R will sort popnames alphanumerically
+poplabs <- factor(popnames, levels= popnames)
+
+#cycle through pops and get counts for mut
+counts <- rep(0, 4)
+sums <- rep(0, 4)
+pops <- list(AFR, EUR, SAS, EAS)
+
+for (i in 1:length(pops)){
+  counts[i] <- sum(pops[[i]]$Count[muts.i]) #number of obersvations of muts in pop
+  sums[i]<- sum(pops[[i]]$Count)#total polymorphisms in pop
+}
+
+#estimate substitution probability
+N.c <- sum(AFR$context_in_genome[muts.i])
+theta <- counts/N.c
+L <- theta - 1.96*sqrt(theta*(1-theta)/N.c)
+U <- theta + 1.96*sqrt(theta*(1-theta)/N.c)
+
+#normalize to rate estimate; assume genome wide subsitution probability is measured without error
+norm <- 1.2E-8*(sum(as.numeric(AFR$context_in_genome))/3)/sums
+
+df <- data.frame(cbind(popnames, theta*norm, L*norm, U*norm))
+plotcol <- reorder(colors, theta*norm)
+
+b <- ggplot(df, aes(reorder(popnames, c(1,2,3,4)), theta*norm)) +
+  geom_point(size = 3, color = plotcol) +
+  geom_errorbar(aes(ymax = U*norm, ymin = L*norm), color = plotcol, size =.75)+
+  labs(y =  bquote(paste("Estimated mutation rate of")~.("TTTAAAA")%->%.("T")~paste("and")~.("TTTAAAA")%->%.("T"))) + #y axis label
+  theme(axis.text.x = element_text(size = rel(.9)), axis.title.x = element_blank(), #adjust text sizes
+        axis.title.y = element_text(size = rel(.9)), axis.text.y = element_text(size = rel(.9), angle = 0, hjust = 0.5), title = element_text(size = rel(.7)),
+        legend.position = 'none')
+```
+
+```{r F4BC make, fig.width=7, fig.height = 3.25}
+c <- subrate.scplot(EUR_7mer_counts, AFR_7mer_counts, "TAA->T", c("Europe", "Africa"), c("ATTAAAA->T", "TTTAAAA->T"))
+grid.arrange(b, c, ncol = 2)
+```
+
